Bug 132393 - Page numbers for alphabetical index not displayed, if index is in more than one column (see comment 8)
Summary: Page numbers for alphabetical index not displayed, if index is in more than o...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.2.0 target:7.1.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: TableofContents-Indexes
  Show dependency treegraph
 
Reported: 2020-04-24 23:29 UTC by searles
Modified: 2021-04-15 14:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
see last page... just use libre instructions to get already tagged 2 col index (21.00 KB, application/msword)
2020-04-28 16:52 UTC, searles
Details

Note You need to log in before you can comment on or make changes to this bug.
Description searles 2020-04-24 23:29:05 UTC
Description:
entries tagged for indexing appear as expected (tag..... pagenum) for a single column output.  For two col page numbers are appearing somewhere east of the right margin (tag .........| tag ...........................................). A proper output can be achieved using the identical text via MSFT Word and even the Libre method of tagging (tag .... nn | tag ...... nn) for the output.  Occurs in Win 10.. earliee versons not tested.  columns of skewed size (different sizes on each side wityh or withour separator not tested)

Steps to Reproduce:
1.use a text with keywords tagged (insert-insert entry)
2.attempt a two column output of printed index (inset-alpha index- 2 col)
3.

Actual Results:
see above

Expected Results:
tag ....... | tag ......
tag ....... | tag .........................................


Reproducible: Always


User Profile Reset: No



Additional Info:
tag .....nn  | tag ....nn
tag .....nn  | tag ....nn
Comment 1 Julien Nabet 2020-04-25 10:14:17 UTC
Could you give a try to last LO version 6.4.3?
Indeed, 6.0, like 6.1, 6.2 and soon 6.3 branches are EOL.
Comment 2 searles 2020-04-25 22:58:48 UTC
as per your request have replaced libre version 6.4.2.2 with version 6.4.3.2, but tthe problem lives on unchanged
Comment 3 searles 2020-04-25 22:59:26 UTC Comment hidden (obsolete)
Comment 4 QA Administrators 2020-04-26 03:39:57 UTC Comment hidden (obsolete)
Comment 5 Julien Nabet 2020-04-26 15:39:32 UTC
Would it be possible you attach an example file with a minimum step by step more detailed process to reproduce this?
The goal is to reproduce this more easily.
Comment 6 searles 2020-04-28 16:52:36 UTC
Created attachment 160035 [details]
see last page... just use libre instructions to get already tagged 2 col index
Comment 7 Julien Nabet 2020-04-30 16:42:09 UTC
Too much to read here just to reproduce a bug.
=> uncc myself.
Comment 8 Buovjaga 2020-08-23 18:01:29 UTC
1. Open attachment 160035 [details]
2. Anywhere on the first page, Insert - ToC and Index - ToC and index...
3. Type: Alphabetical, Columns: 2

Observe that the page numbers are out of view

Bibisected with Linux 41max repo to https://git.libreoffice.org/core/commit/bdfc6363d66aa079512cc8008996b633f693fed1

n#793998 sw: add TabOverMargin compat mode

In case the right margin is larger then the tab position (e.g. the right
margin of 7cm, there is a tab position at 16cm and right margin begins
at 9cm), we have a conflicting case.  In Word, the tab has priority, so
in this conflicting case, the text can be outside the specified margin.
In Writer, the right margin has priority. Add a compat flag to let
the tab have priority in Writer as well for Word formats.

This is similar to TabOverflow, but that was only applied to left tabs
and only in case there were no characters after the tabs in the
paragraph.

Adding Cc: to Miklos Vajna

Better get SUSE to pay for the fix :P
Comment 9 Commit Notification 2021-04-13 06:40:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e1cc5041cfb7272eb96f174e1c64285420397588

tdf#132393 sw: disable TabOverMargin layout flag inside sections

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2021-04-13 09:48:56 UTC
Verified, thanks!

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 5e5c7e10a5fde5ed93c541d439ce016e35d5d65a
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 13 April 2021
Comment 11 Xisco Faulí 2021-04-15 14:07:16 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: a199e4ea389c934d169a178433f4b94033e60f93
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 12 Commit Notification 2021-04-15 14:08:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/3c54bbc15c8076aa9caaa27642045cb38d4a6b35

tdf#132393 sw: disable TabOverMargin layout flag inside sections

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.