tdf#132393 sw: disable TabOverMargin layout flag inside sections

Regression from commit bdfc6363d66aa079512cc8008996b633f693fed1
(n#793998 sw: add TabOverMargin compat mode, 2013-01-08), the problem is
that currently adding an alphabetical index generates document model
where tab positions are explicitly over the margin and users expect that
the page numbers are still visible, even for Word documents.

Fix the problem by disabling this mode inside sections. Long-term we may
want to fix the ToX generator to create a more sane document model and
then this flag can be handled even inside sections.

Change-Id: Ic91ac36e703d59e4711a009db1f921e456bf8645